@@ -1,7 +1,11 @@
+2009-10-22 20:53  rsbivand
+
+	* DESCRIPTION, R/vect_link.R: fixing locale problem
+
 2009-09-23 11:27  rsbivand
 
-	* DESCRIPTION, R/xml1.R: no paramters in interface description
-	  warning
+	* DESCRIPTION, R/xml1.R, ChangeLog, inst/ChangeLog: no paramters in
+	  interface description warning
 
 2009-09-09 08:42  rsbivand
 
